Bug 300697 - Entering split transaction with "payment from" always changes to "payment to" when the transaction is completed
Summary: Entering split transaction with "payment from" always changes to "payment to"...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-27 09:58 UTC by Shane
Modified: 2014-10-19 11:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shane 2012-05-27 09:58:09 UTC
When entering a split transaction with a "payment from", upon completion of the transaction the payment changes to a "payment to" and is shown in the register as an error highlighted with a yellow triangle. Its is simple to reopen the transaction to change it back to a "payment from", but annoying.

Apart from that, the package is fantastic and meets the needs of both my business and personal finances very adequately. Thanks

Reproducible: Always

Steps to Reproduce:
1.Start a new "payment from" and enter a couple of splits
2.Finish the transaction 
3.Look at the transaction in the register and it will have changed to a "payment to"
4.Correct problem by reopening transaction and changing it to a "payment from"
Actual Results:  
Yellow warning triangle beside the payment in the register, and summary amounts in register incorrect

Expected Results:  
Should have entered it into the register as a "payment from" instead of changing its status to a "payment to" - the register totals would then be correctly displayed.
Comment 1 Thomas Baumgart 2012-05-28 05:26:35 UTC
Which version are you using? I tried to duplicate this with current master and cannot duplicate it. Can you explain in detail which version do you have, how you start the transactions (which key or buttons do you press) and which type of account and categories do you use when you see this problem?
Comment 2 Shane 2012-05-28 07:02:42 UTC
I am using KMM 4.5.3 on KDE Dev platform 4.5.5

From the Home window, I click on my Current account (in my asset accounts list)
When the register opens, I click "New"
I click on "Pay to" to change it to "From", and enter the payer, date, and amount.
As this payment is allocated across three account categories, I click on the "Split" button
In the split window, I enter the first account, description, and amount
I move to the second line and enter the next
I move to the final line and enter the third.
I click OK, then press Enter
The transaction changes from a "From" to a "Pay to", and I get the yellow warning triangle
To correct, I must edit the transaction and click the "Pay to" button to change it to a "From" and press enter - it will then enter correctly.
Comment 3 Cristian Oneț 2014-10-19 11:13:18 UTC
Git commit 3af05653526bbb8189e21dcccdd3f5331723e932 by Cristian Oneț.
Committed on 19/10/2014 at 11:09.
Pushed by conet into branch 'master'.

Fix transaction entry when starting from transfer tab.

When the transfer tab was being disabled the next tab was being
set as the active tab automatically without considering currently
entered data. This would mess up the transaction as described in the
report.

To fix this, before disabling the transfers tab, if it is the current
tab, the proper deposit/withdrawl tab is selected.

M  +12   -5    kmymoney/dialogs/transactioneditor.cpp

http://commits.kde.org/kmymoney/3af05653526bbb8189e21dcccdd3f5331723e932
Comment 4 Cristian Oneț 2014-10-19 11:15:21 UTC
Git commit dea582710293e36cbeaf049d6a7ca58dca6b5e3d by Cristian Oneț.
Committed on 19/10/2014 at 11:09.
Pushed by conet into branch '4.7'.

Fix transaction entry when starting from transfer tab.

When the transfer tab was being disabled the next tab was being
set as the active tab automatically without considering currently
entered data. This would mess up the transaction as described in the
report.

To fix this, before disabling the transfers tab, if it is the current
tab, the proper deposit/withdrawl tab is selected.
(cherry picked from commit 3af05653526bbb8189e21dcccdd3f5331723e932)

M  +12   -5    kmymoney/dialogs/transactioneditor.cpp

http://commits.kde.org/kmymoney/dea582710293e36cbeaf049d6a7ca58dca6b5e3d